# agent-design-studio

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
configs/: candidate_profiles.yaml  default_preferences.yaml  design_axes.yaml  tool_registry.yaml
configs/archetypes/: content.yaml  monitoring.yaml  research.yaml
docs/: AGENT_DESIGN.md  architecture.md  design-doc.md  design-space.md  evaluation.md  manual-generation.md  overview.md  roadmap.md  user-flows.md
examples/pdf_summarizer/: README.md
examples/price_monitor/: README.md
src/agent_design_studio/: __init__.py
src/agent_design_studio/compilers/: __init__.py
src/agent_design_studio/engines/: __init__.py  candidate_compare.py  candidate_transforms.py  candidates.py  design_diff.py  design_ir.py  design_space.py
src/agent_design_studio/evaluation/: __init__.py
src/agent_design_studio/runtime/: __init__.py
src/agent_design_studio/schemas/: __init__.py  candidate.py  comparison.py  design_doc.py  design_ir.py  design_space.py  design_state.py  evaluation_result.py  patch.py  task_spec.py  tradeoff_spec.py  user_profile.py  visualization.py  workflow_graph.py
src/agent_design_studio/templates/code/: agent_main.py.jinja  workflow.yaml.jinja
src/agent_design_studio/templates/design_doc/: default.md.jinja
src/agent_design_studio/templates/manuals/: agent_manual.md.jinja
src/agent_design_studio/ui/: app.py  chat_intents.py  cli.py  state.py
tests/: test_candidates.py  test_design_ir.py  test_design_space.py  test_imports.py  test_schemas.py  test_ui_state.py
(+1 files in other folders)
